--- a/.github/workflows/continuous_deployment.yml
+++ b/.github/workflows/continuous_deployment.yml
@@ -3,7 +3,7 @@ name: Continuous deployment
 on: [push, pull_request]
 
 jobs:
-  release:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions-rs/toolchain@v1
@@ -23,3 +23,9 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+      - uses: JamesIves/github-pages-deploy-action@3.6.2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: build
+          CLEAN: true
